ChangeLog for 2.53.1

//Beta 52
Allow taking a screenshot in ZC that shows the subscreen area
	when the NOSUBSCREEN flag is enabled, by holding the
	ALT key when taking the snapshot.
Preserve the quest colours when taking a GUI snapshot in ZC Player
	unless the user holds the CONTROL key when taking the snapshot.
Fixed a crash reported by ywkls,that when trying to use the
	tile grabber on .qst and .qsu files, where the tile 
	grabber would allow the user to scroll outside the 
	bounds of the .qst tile buffer. 
	It is now clamped to MAXTILEROWS.
	( ZoriaRPG, 6th June, 2020 )
	
//Beta 51
Te old water emulation flag is now enabled whenever loading a quest 
	oolder than 2.50. 
	( ZoriaRPG, 4th June, 2020 )
	
Added 'Old 2.10 Water' emulation to ZC Player.
	This is intended as a patch for old 2.10 quests that have
	very-specific water combo placement where you are expected
	to use the ladder (while you have the flippers), but the flippers
	engage.
	( ZoriaRPG, 26th May, 2020 )

//Beta 50
Try to properly initialise directItem and directItemA.
	( ZoriaRPG, 23rd May, 2020 )
	
//Beta 49
Slight changes to the directItem init when loading quests, that
	now checks if the prior quest was a B+A subscreen type. 
	( ZoriaRPG, 23rd May, 2020 )

//Beta 48
Fixed a memory leak when compiling scripts and exiting out of
	the assign scripts dialogue with Cancel.
	( ZoriaRPG, 16th May, 2020 )

//Beta 47 
Added sanity guard to inline bool get_item(int id).
	( ZoriaRPG, 12th May, 2020 )

//Beta 46
Fixed possible crash and bad error message for Screen->Combo[] errors.

//Beta 45
Slight timing fix to directItemA, for B-only quests. 
	( ZoriaRPG, 30th April, 2020 )

//Beta 44
You can now press C in the Tile Editor to copy a tile, then
	select a range of tiles and press F to FLOODFILL paste the copied
	tile to every position.
In the Tile Editor, electing multiple tiles, pressing C, 
	then selecting multiple tiles and pressing O will now overlay